# kupids-classifier

./: .gitignore  README.md  api.py  api_contract.yaml  app.py  pyproject.toml
models/: logreg_model.pkl  tfidf_vectorizer.pkl
notebooks/: 01_exploration.ipynb  02_eda.ipynb  03_modelling.ipynb
src/: eda.py  inference.py  model_comparison.py  preprocessing.py  scraper.py
